--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,12 @@ plugins {
     id 'io.qameta.allure' version '2.11.2'
 }
 
-def allureVersion = "2.21.0"
+def allureVersion = "2.21.0",
+    junitVersion = "5.10.0",
+    selenideVersion = "7.3.3",
+    assertjVersion = "3.26.3",
+    slf4jVersion = "2.0.7",
+    ownerVersion = "1.0.12"
 
 group = 'com.mrnatsumi8'
 version = '1.0-SNAPSHOT'
@@ -26,16 +31,15 @@ allure {
     }
 }
 
-
 dependencies {
     testImplementation(
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "org.junit.jupiter:junit-jupiter:5.10.0",
-            "com.codeborne:selenide:7.3.3",
-            'org.assertj:assertj-core:3.26.3',
-            'org.slf4j:slf4j-simple:2.0.7',
-            'org.aeonbits.owner:owner:1.0.12',
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "com.codeborne:selenide:$selenideVersion",
+            "org.assertj:assertj-core:$assertjVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:$ownerVersion"
     )
 }
 
